tests/errors/header/unexpected_cmd_mult.s
.name "Zork
deuxieme ligne"fin
.comment "Hello, i'm Kroz"
		
live %1
